export interface IPlayerPos {
  x: number;
  y: number;
}

